* Added: HTTP Basic authentication support (Yuen-Chi Lian).
* Added: EAR packaging (Victor Hugo Borja).
* Added: Profiles(.yaml), based on the code provided by Yanko Ivanov.
* Added: Consolidated API for RJB and JRuby, replacing the now deprecated JavaWrapper.
* Added: JRuby 1.1 support (Victor Hugo Borja, Nick Sieger).
* Added: IDEA 7 task: use buildr idea7x (Shane Witbeck).
* Changed: Upgraded to Antwrap 0.7.0, thanks to Caleb Powel for relicensing under Apache License.
* Changed: Upgraded to Rake 0.8, RSpec 1.1, RJB 1.1, Facets 2.2, OpenJPA 1.0.1.
* Changed: Resources are now copied to target/resources instead of target/classes, and target/test/resources instead of target/test-resources.
* Changed: Test cases are now compiled into target/test/classes instead of target/test-classes.
* Changed: Compile extension and CompileTask are now separate from the Java module.  Multiple compilers can be used, either guessed from the project layout, or specified with compile.using(:name).
* Changed: Test extension and TestTask are now separate from the Java module.  JUnit and TestNG are Java specific extensions picked using test.with(:name).
* Changed: For compile and test, use dependencies instead of classpath (with works are before).
* Changed: Test framework componentized along the same lines as the compilers.
* Changed: The way packaging is handled: package_as_[type] is now called once for a given package with the exact file name.  If packaging requires a change to the specifiction (e.g. a different file type than the package type), add a package_as_[type]_spec method.
* Changed: The default packaging type is inferred from the compiler, and without a compiler, defaults to :zip.
* Changed: JUnit test framework now runs on all classes that extend junit.framework.TestCase.
* Changed: Scalac compiler now used by the regular compile task, the scalac task is deprecated.
* Changed: RDoc are now generated using Allison (http://blog.evanweaver.com/files/doc/fauna/allison).